tdf#159075 Fix drawing comment triangle in Calc

Change-Id: I82779ecd3ca4cf7ad95ab8f927c1a5e371613bf1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161768
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>